syntax = "proto3";

option java_package = "kr.lul.grpc.message.time";
option java_outer_classname = "TemporalProto";

package kr.lul.message.time;

import "kr/lul/message/time/local_date.proto";
import "kr/lul/message/time/local_date_time.proto";
import "kr/lul/message/time/local_time.proto";
import "kr/lul/message/time/offset_date_time.proto";
import "kr/lul/message/time/offset_time.proto";
import "kr/lul/message/time/zoned_date_time.proto";

import "google/protobuf/timestamp.proto";

message Temporal {
    oneof temporal {
        google.protobuf.Timestamp timestamp = 1;
        LocalDate local_date = 2;
        LocalDateTime local_date_time = 3;
        LocalTime local_time = 4;
        OffsetDateTime offset_date_time = 5;
        OffsetTime offset_time = 6;
        ZonedDateTime zoned_date_time = 7;
    }
}